--- a/capitulo1/index.html
+++ b/capitulo1/index.html
@@ -7,14 +7,17 @@
   </head>
 
   <body>
-    <article>Pagina de milhões.
-      Pagina Inicial <em>Vegeta ta de olho</em>
+    <article> Inicio <br/>
+      <em>Vegeta ta de olho</em>
       <h1>The elemento circuntante</h1>
+      <section>
+        <h2>Botando pra gerar</h2>
+      </section>
       <img src="https://pbs.twimg.com/media/DqO2ryPX4AEsg_T.jpg" width="300" height="175">
     </article>
     
 
-    <a href="https://www.google.com" title="link para o google">Goku</a> 
+    <a href="https://www.youtube.com/watch?v=c_e8k2B2U-Y&t=16s" title="link para o céu">Goku</a> 
     vs 
     <a href="https://www.youtube.com/watch?v=k73bq6E_bRo" title="Link para o Yt"> Vegeta &copy;</a>
 
@@ -26,6 +29,9 @@
     Leia <a href="sobre-mim.html"> sobre mim</a> <br/> 
     
    <a href="contato/contato.html"> Contato</a> <a href="../capitulo2/">Contato CP2</a>
+   <footer>
+    <address> Perguntas sobre o site? <a href="../capitulo3/index.html"> Veja meus contatos</address>
+</footer>
 
   </body>
 
